--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,6 +127,135 @@ dfn {
   font-style: italic;
 }
 
+/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+
+/**
+ * 1. Set default font family to sans-serif.
+ * 2. Prevent iOS text size adjust after orientation change, without disabling
+ *    user zoom.
+ */
+
+html {
+  font-family: sans-serif; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+}
+
+/**
+ * Remove default margin.
+ */
+
+body {
+  margin: 0;
+}
+
+/* HTML5 display definitions
+   ========================================================================== */
+
+/**
+ * Correct `block` display not defined for any HTML5 element in IE 8/9.
+ * Correct `block` display not defined for `details` or `summary` in IE 10/11
+ * and Firefox.
+ * Correct `block` display not defined for `main` in IE 11.
+ */
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+/**
+ * 1. Correct `inline-block` display not defined in IE 8/9.
+ * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
+ */
+
+audio,
+canvas,
+progress,
+video {
+  display: inline-block; /* 1 */
+  vertical-align: baseline; /* 2 */
+}
+
+/**
+ * Prevent modern browsers from displaying `audio` without controls.
+ * Remove excess height in iOS 5 devices.
+ */
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+/**
+ * Address `[hidden]` styling not present in IE 8/9/10.
+ * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
+ */
+
+[hidden],
+template {
+  display: none;
+}
+
+/* Links
+   ========================================================================== */
+
+/**
+ * Remove the gray background color from active links in IE 10.
+ */
+
+a {
+  background-color: transparent;
+}
+
+/**
+ * Improve readability when focused and also mouse hovered in all browsers.
+ */
+
+a:active,
+a:hover {
+  outline: 0;
+}
+
+/* Text-level semantics
+   ========================================================================== */
+
+/**
+ * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ */
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+/**
+ * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
+ */
+
+b,
+strong {
+  font-weight: bold;
+}
+
+/**
+ * Address styling not present in Safari and Chrome.
+ */
+
+dfn {
+  font-style: italic;
+}
+
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari, and Chrome.
@@ -1109,6 +1238,15 @@ section.log-button {
   width: 100%;
 }
 
+#action_header{
+  border-style: solid;
+  border-color: black;
+  height: 50px;
+  background-color: #4d4d4d;
+  text-align: center;
+  color: white;
+}
+
 #info_table{
   margin-top: 20px;
   margin-bottom: 20px;
@@ -1123,9 +1261,8 @@ section.log-button {
   text-indent: 10px;
 }
 
-#description{
-  width:  500px;
-  height: 300px;
+#action_desc{
+  width: 40%;
 }
 
 .title_descript{
@@ -1169,10 +1306,6 @@ section.log-button {
   border-style: solid;
   border-color: black;
   width: 14%;
-  height: 50px;
-  background-color: #4d4d4d;
-  text-align: center;
-  color: white;
 }
 
 .info_rows{
@@ -1181,8 +1314,16 @@ section.log-button {
   border-width: 1px;
 }
 
-.end{
-  width: 7%;
+.shorten_td{
+  border-style: solid;
+  border-color: black;
+  width: 8%;
+}
+
+.date_td{
+  border-style: solid;
+  border-color: black;
+  width: 8%;
 }
 
 .text_area{
@@ -1205,5 +1346,9 @@ section.log-button {
 .table_button{
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.short_td{
+
 }
 /**************************************/
