--- a/public/css/style.css
+++ b/public/css/style.css
@@ -477,6 +477,12 @@ input[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
+input[type="date"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+    align-items: left;
+}
+
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
  * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
