--- a/public/css/style.css
+++ b/public/css/style.css
@@ -432,7 +432,7 @@ button[disabled],
 html input[disabled],
 select[disabled] {
   cursor: default;
-  background-color: #737373;
+  background-color: #bfbfbf;
 }
 
 
