Added Cadillac island

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,6 +164,9 @@ textarea {
   overflow: auto;
 }
 
+select{
+  margin-left: 5px;
+}
 /* Tables
    ========================================================================== */
 
