--- a/public/css/select_page.css
+++ b/public/css/select_page.css
@@ -72,7 +72,9 @@ div{
   border-style: solid;
   border-color: #fff;
   border-width: 1px;
+  border-radius: 10px;
   width: 90%;
   margin: 0 5%;
+  margin-bottom: 10px;
   overflow-x: auto;
 }
