Added datetime to server output

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -854,5 +854,14 @@ section.log-button {
   color: white;
 }
 
-
 /**************************************/
+
+#pass_container{
+  display: inline-block;
+  padding: 15px 10px;
+}
+
+.input_spacing{
+  display: inline-block;
+  /*position: absolute;*/
+}
