--- a/public/css/select_page.css
+++ b/public/css/select_page.css
@@ -9,9 +9,8 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1, h2{
+h1, h2, h3{
   color: white;
-  
 }
 
 div{
@@ -77,4 +76,8 @@ div{
   margin: 0 5%;
   margin-bottom: 10px;
   overflow-x: auto;
+}
+
+#return_home{
+  margin: 0 39%;
 }
